Corrección de diseño

--- a/calcular.html
+++ b/calcular.html
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="input-field">
+        <div class="input-field col l8">
           <input placeholder="" id="txResultado" type="text" ng-model="resultado" readonly="readonly">
           <label for="txResultado">Resultado</label>
         </div>
