--- a/calcular.html
+++ b/calcular.html
@@ -4,7 +4,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <title>Calcula tu Índice de Masa de Corporal</title>
-  <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -14,10 +13,10 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="/" class="brand-logo">IMC</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#LogOut">Cerrar Sesión</a></li>
+        <li><a ng-click="LogOut()">Cerrar Sesión</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#LogOut">Cerrar Sesión</a></li>
+        <li><a ng-click="LogOut()">Cerrar Sesión</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
