Corrección de error

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p class="light">Para poder utilizar la calculadora por favor ingresa los siguientes datos.</p>
             <div class="input-field">
               <input id="email" type="text" ng-model="email"  autocorrect="off" autocapitalize="off">
-              <label for="email"">Correo Electronico</label>
+              <label for="email">Correo Electronico</label>
             </div>
             <div class="input-field">
               <input type="password" name="txContra1"  type="password" class="validate" ng-model="password">
