--- a/calcular.html
+++ b/calcular.html
@@ -29,11 +29,11 @@
     <form class="col s12">
       <div class="row">
         <div class="input-field col s12 m6 l3">
-          <input id="txAltura" type="text" class="validate" ng-model="altura">
+          <input id="txAltura" placeholder="" type="text" class="validate" ng-model="altura">
           <label for="txAltura">Altura en CM</label>
         </div>
         <div class="input-field col s12 m6 l3">
-          <input id="txPeso" type="text" class="validate" ng-model="peso">
+          <input id="txPeso" placeholder="" type="text" class="validate" ng-model="peso">
           <label for="txPeso">Peso en KG</label>
         </div>
       </div>
